docs: added docs for files
